feat(be) seat 예매 기록 조회 기능 추가